# poligon-lang

./: .gitignore  Cargo.toml
_test_files/: class_example.gon  duck.gon  fib.gon  fizzbuzz.gon  lexical_scope.gon  lexical_scope_ll.gon  plir_llvm_creation.gon  recursive_fib.gon  test_utils.gon
_test_files/informal/: frq3.bc  frq3.d.plir.gon  frq3.gon  frq3.ll  frq3.plir.gon  generic_tests.bc  generic_tests.d.plir.gon  generic_tests.gon  generic_tests.ll  generic_tests.plir.gon  type_test.bc  type_test.d.plir.gon  type_test.gon  type_test.ll  type_test.plir.gon
_test_files/plir_llvm/: codegen.gon  compiler_types.gon  early_exits.gon
src/: ast.rs  err.rs  lexer.rs  lib.rs  main.rs  parser.rs  parser2.rs  repl.rs  span.rs  test_utils.rs  token.rs
src/ast/: display.rs  expr.rs  fun.rs  located.rs  mod.rs  op.rs  stmt.rs  types.rs
src/compiler/: codegen.rs  d_parser.rs  d_types.rs  dsds.rs  gon_value.rs  internals.rs  llvm_codegen.rs  mod.rs  op_impl.rs  plir.rs  plir_codegen.rs  resolve.rs  value.rs
src/display/: ast.rs  mod.rs  plir.rs
src/err/: mod.rs
src/interpreter/: mod.rs  repl.rs  runtime.rs  semantic.rs
src/lexer/: mod.rs  token.rs
src/parser/: expr.rs  mod.rs  pat.rs
src/parser2/: expr.rs
src/program/: gstd.rs  mod.rs  value.rs  vars.rs
src/runtime/: gstd.rs  mod.rs  vars.rs
src/semantic/: mod.rs
src/tree/: display.rs  mod.rs  op.rs  program.rs
src/util/: mod.rs  refval.rs
std/: intrinsic_test.gon  intrinsic_test.ll  intrinsic_test.plir.gon  std.bc  std.d.plir.gon  std.gon  std.ll  std.plir.gon
tests/: lex.rs  main.rs
(+50 files in other folders)
