[package]
name = "poligon-lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.6.0"

# 83dd54b was the latest commit on master on December 30, 2022
inkwell = { git = "https://github.com/TheDan64/inkwell", rev = "3c5d770", features = ["llvm14-0"] }