[package]
name = "poligon-lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.6.0"

# 83dd54b was the latest commit on master on January 21, 2023
inkwell = { git = "https://github.com/TheDan64/inkwell", rev = "15cbacf", features = ["llvm15-0"] }
indexmap = "1.9.2"
clap = { version = "4.1.11", features = ["derive"] }
once_cell = "1.18.0"
